Thu Nov 15 01:55:15 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Add --quiet option to xapian-replicate, and
	  be a little more verbose by default.

Thu Nov 15 01:54:14 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: xapian-replicate --force-copy now only
	  forces a single copy, and then attempts to replicate incrementally.

Thu Nov 15 00:51:50 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Tweak code layout.

Wed Nov 14 21:40:45 GMT 2012  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Allow files > 32G to be be copied by
	  replication.

Tue Nov 13 03:44:03 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Pass 'true' or 'false' for 'bool' parameter,
	  not '0' or '1' (especially confusing as the two previous parameters
	  were integers which were often 0 or 1...)

Tue Nov 13 03:34:42 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc,net/replicatetcpclient.cc,
	  net/replicatetcpclient.h: Add --full-copy option to xapian-replicate.
	* tests/api_replicate.cc: New testcase replicate6 which tests the same
	  code path used by 'xapian-replicate --full-copy'.

Tue Nov 13 02:55:44 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Use '++' instead of '+= 1'.  Drop superfluous
	  'return;' at end of function returning void.

Tue Nov 13 01:12:33 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Tweak to avoid default initialisation of
	  string.

Mon Nov 12 23:25:14 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: GCC 4.6.3 doesn't optimise the asr idion
	  either.  Add links to the PR I filed and the GCC documentation that
	  signed right shift does sign extension.

Mon Nov 12 10:21:19 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h,unicode/tclUniData.cc: Update Unicode
	  character database to 6.2.0.
	* tests/api_unicode.cc: Add tests for U+20BA, added in 6.2.0.
