@@ -1,3 +1,8 @@
+Thu Nov 15 05:28:40 GMT 2012  Olly Betts <olly@survex.com>
+
+	* tests/api_anydb.cc: Fix reversebool1 and reversebool2 to actually
+	  use the result when they check an MSetIterator against end().
+
 Thu Nov 15 01:55:15 GMT 2012  Olly Betts <olly@survex.com>
 
 	* bin/xapian-replicate.cc: Add --quiet option to xapian-replicate, and
